Fixed misalignment in PageWrapper

--- a/src/common/components/PageWrapper/styles.module.scss
+++ b/src/common/components/PageWrapper/styles.module.scss
@@ -1,7 +1,7 @@
 .wrapperStyle {
   width: 100%;
   box-sizing: content-box;
-  max-width: 1000px;
+  max-width: 1140px;
   margin-right: auto !important;
   margin-left: auto !important;
 
